--- a/Thuong_Le_EX3/test.html
+++ b/Thuong_Le_EX3/test.html
@@ -12,7 +12,7 @@
 <div id="qunit-fixture"></div>
 <script src="scripts/brushes.js"></script>
 <script src="scripts/undo.js"></script>
-<script src="scripts/clock.js"></script>
+<!--<script src="scripts/clock.js"></script>-->
 <script src="scripts/app.js"></script>
 <script src="resources/qunit-2.4.0.js"></script>
 <script src="resources/lodash.js"></script>
